# t2-emiliopedrollo

./: .gitignore  CMakeLists.txt  Entrega.md  loop.sh  results.csv  specs.txt
openmp/: ompsimple.c
